# metadata-cleaner

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  cleaned.json  docker-compose.yml  original.json
.cargo/: audit.toml
.github/workflows/: ci.yml
src/: main.rs
src/backend/: db.rs  error.rs  exiftool.rs  export.rs  logger.rs  mod.rs  models.rs  scanner.rs
src/frontend/: main.rs  mod.rs  ui.rs
src/frontend/components/: file_list.rs  mod.rs  progress_bar.rs  settings_panel.rs
src/frontend/pages/: history_page.rs  mod.rs  scanner_page.rs
