[package]
name = "metadata-cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio", "debug", "canvas"] }
tokio = { version = "1.36", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
rfd = "0.14"
uuid = { version = "1.8", features = ["v4", "serde"] }
