[package]
name = "metadata-cleaner"
version = "0.1.0"
edition = "2021"
description = "A cross-platform desktop application to scan and clean metadata from files using ExifTool"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/metadata-cleaner"
homepage = "https://github.com/YOUR_USERNAME/metadata-cleaner"
keywords = ["metadata", "privacy", "exif", "exiftool", "rust", "desktop"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
iced = { version = "0.12", features = ["tokio", "debug"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "sync", "time", "macros"] }
rusqlite = { version = "0.31", features = ["bundled"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
rfd = "0.14"
uuid = { version = "1.8", features = ["v4", "serde"] }
